// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MastheadSearchForm invalid id at the end of the url 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  border: 1px solid transparent;
  font-size: 16;
  font-size: 0.8888888888888888rem;
  line-height: 1.2;
  padding: 6.5px;
  height: 52px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  min-width: 180px;
}

.emotion-0[lang='zh'],
.emotion-0[lang='zh-Hans'],
.emotion-0[lang='zh-Hant'] {
  font-size: calc(16 * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-0:focus-within {
  background: #fff;
  border: 1px solid #a5bcd3;
}

.emotion-0:hover {
  cursor: pointer;
  border: 1px solid #a5bcd3;
}

.emotion-0 input {
  padding: 6.5px;
  background: transparent;
  border: 0;
  outline: none;
  color: #20588f;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.emotion-0 input:not(:focus-within)::-webkit-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::-moz-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within):-ms-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0>button {
  color: #777777;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-1:hover,
.emotion-1:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-1[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-1[lang='zh'],
.emotion-1[lang='zh-Hans'],
.emotion-1[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:disabled,
.emotion-1:focus-visible {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-1:focus-visible {
  outline-width: medium;
}

.emotion-2 {
  margin: 0 13px;
  width: 24px;
  height: 24px;
}

<div>
  <form
    class="emotion-0"
  >
    <button
      class="emotion-1"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="c-icon emotion-2"
        data-license="Apache License 2.0"
        data-source="Material Design"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle; color: rgb(32, 88, 143);"
        viewBox="0 0 48 48"
        width="1em"
      >
        <g>
          <path
            d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
          />
        </g>
      </svg>
    </button>
    <input
      placeholder="Søk"
      type="text"
      value="https://ndla-frontend.test.api.ndla.no/article/urn:subject:100/urn:topic:1:179373/urn:resource:1:16838"
    />
  </form>
</div>
`;

exports[`MastheadSearchForm redirects on ndla node id pasted 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  border: 1px solid transparent;
  font-size: 16;
  font-size: 0.8888888888888888rem;
  line-height: 1.2;
  padding: 6.5px;
  height: 52px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  min-width: 180px;
}

.emotion-0[lang='zh'],
.emotion-0[lang='zh-Hans'],
.emotion-0[lang='zh-Hant'] {
  font-size: calc(16 * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-0:focus-within {
  background: #fff;
  border: 1px solid #a5bcd3;
}

.emotion-0:hover {
  cursor: pointer;
  border: 1px solid #a5bcd3;
}

.emotion-0 input {
  padding: 6.5px;
  background: transparent;
  border: 0;
  outline: none;
  color: #20588f;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.emotion-0 input:not(:focus-within)::-webkit-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::-moz-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within):-ms-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0>button {
  color: #777777;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-1:hover,
.emotion-1:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-1[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-1[lang='zh'],
.emotion-1[lang='zh-Hans'],
.emotion-1[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:disabled,
.emotion-1:focus-visible {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-1:focus-visible {
  outline-width: medium;
}

.emotion-2 {
  margin: 0 13px;
  width: 24px;
  height: 24px;
}

<div>
  <form
    class="emotion-0"
  >
    <button
      class="emotion-1"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="c-icon emotion-2"
        data-license="Apache License 2.0"
        data-source="Material Design"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle; color: rgb(32, 88, 143);"
        viewBox="0 0 48 48"
        width="1em"
      >
        <g>
          <path
            d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
          />
        </g>
      </svg>
    </button>
    <input
      placeholder="Søk"
      type="text"
      value="#4737"
    />
  </form>
</div>
`;

exports[`MastheadSearchForm redirects on ndla url paste with id at the end 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  border: 1px solid transparent;
  font-size: 16;
  font-size: 0.8888888888888888rem;
  line-height: 1.2;
  padding: 6.5px;
  height: 52px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  min-width: 180px;
}

.emotion-0[lang='zh'],
.emotion-0[lang='zh-Hans'],
.emotion-0[lang='zh-Hant'] {
  font-size: calc(16 * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-0:focus-within {
  background: #fff;
  border: 1px solid #a5bcd3;
}

.emotion-0:hover {
  cursor: pointer;
  border: 1px solid #a5bcd3;
}

.emotion-0 input {
  padding: 6.5px;
  background: transparent;
  border: 0;
  outline: none;
  color: #20588f;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.emotion-0 input:not(:focus-within)::-webkit-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::-moz-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within):-ms-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0>button {
  color: #777777;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-1:hover,
.emotion-1:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-1[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-1[lang='zh'],
.emotion-1[lang='zh-Hans'],
.emotion-1[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:disabled,
.emotion-1:focus-visible {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-1:focus-visible {
  outline-width: medium;
}

.emotion-2 {
  margin: 0 13px;
  width: 24px;
  height: 24px;
}

<div>
  <form
    class="emotion-0"
  >
    <button
      class="emotion-1"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="c-icon emotion-2"
        data-license="Apache License 2.0"
        data-source="Material Design"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle; color: rgb(32, 88, 143);"
        viewBox="0 0 48 48"
        width="1em"
      >
        <g>
          <path
            d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
          />
        </g>
      </svg>
    </button>
    <input
      placeholder="Søk"
      type="text"
      value=""
    />
  </form>
</div>
`;

exports[`MastheadSearchForm redirects on ndla url paste with taxonomy id at the end 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  border: 1px solid transparent;
  font-size: 16;
  font-size: 0.8888888888888888rem;
  line-height: 1.2;
  padding: 6.5px;
  height: 52px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  min-width: 180px;
}

.emotion-0[lang='zh'],
.emotion-0[lang='zh-Hans'],
.emotion-0[lang='zh-Hant'] {
  font-size: calc(16 * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-0:focus-within {
  background: #fff;
  border: 1px solid #a5bcd3;
}

.emotion-0:hover {
  cursor: pointer;
  border: 1px solid #a5bcd3;
}

.emotion-0 input {
  padding: 6.5px;
  background: transparent;
  border: 0;
  outline: none;
  color: #20588f;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.emotion-0 input:not(:focus-within)::-webkit-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::-moz-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within):-ms-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0>button {
  color: #777777;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-1:hover,
.emotion-1:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-1[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-1[lang='zh'],
.emotion-1[lang='zh-Hans'],
.emotion-1[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:disabled,
.emotion-1:focus-visible {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-1:focus-visible {
  outline-width: medium;
}

.emotion-2 {
  margin: 0 13px;
  width: 24px;
  height: 24px;
}

<div>
  <form
    class="emotion-0"
  >
    <button
      class="emotion-1"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="c-icon emotion-2"
        data-license="Apache License 2.0"
        data-source="Material Design"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle; color: rgb(32, 88, 143);"
        viewBox="0 0 48 48"
        width="1em"
      >
        <g>
          <path
            d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
          />
        </g>
      </svg>
    </button>
    <input
      placeholder="Søk"
      type="text"
      value="https://ndla-frontend.test.api.ndla.no/article/urn:subject:100/urn:topic:1:179373"
    />
  </form>
</div>
`;

exports[`MastheadSearchForm redirects on old ndla url paste with new id 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  border: 1px solid transparent;
  font-size: 16;
  font-size: 0.8888888888888888rem;
  line-height: 1.2;
  padding: 6.5px;
  height: 52px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  min-width: 180px;
}

.emotion-0[lang='zh'],
.emotion-0[lang='zh-Hans'],
.emotion-0[lang='zh-Hant'] {
  font-size: calc(16 * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-0:focus-within {
  background: #fff;
  border: 1px solid #a5bcd3;
}

.emotion-0:hover {
  cursor: pointer;
  border: 1px solid #a5bcd3;
}

.emotion-0 input {
  padding: 6.5px;
  background: transparent;
  border: 0;
  outline: none;
  color: #20588f;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.emotion-0 input:not(:focus-within)::-webkit-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::-moz-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within):-ms-input-placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0 input:not(:focus-within)::placeholder {
  color: #20588f;
  font-weight: 600;
  opacity: 1;
}

.emotion-0>button {
  color: #777777;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-1:hover,
.emotion-1:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-1[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-1[lang='zh'],
.emotion-1[lang='zh-Hans'],
.emotion-1[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:disabled,
.emotion-1:focus-visible {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-1:focus-visible {
  outline-width: medium;
}

.emotion-2 {
  margin: 0 13px;
  width: 24px;
  height: 24px;
}

<div>
  <form
    class="emotion-0"
  >
    <button
      class="emotion-1"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="c-icon emotion-2"
        data-license="Apache License 2.0"
        data-source="Material Design"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle; color: rgb(32, 88, 143);"
        viewBox="0 0 48 48"
        width="1em"
      >
        <g>
          <path
            d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
          />
        </g>
      </svg>
    </button>
    <input
      placeholder="Søk"
      type="text"
      value="https://ndla.no/nb/node/4737?fag=36"
    />
  </form>
</div>
`;
